@@ -328,6 +328,11 @@ public class SpanOrQuery extends SpanQuery implements Cloneable {
         }
 
         @Override
+        public int width() {
+          return topPositionSpans.width();
+        }
+
+        @Override
         public void collect(SpanCollector collector) throws IOException {
           topPositionSpans.collect(collector);
         }
